<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_agendar_consulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E3E3">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="410dp"
        android:layout_height="250dp"
        android:background="#F8F8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:text="@string/text_h1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:background="@color/ffffff" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/text_h2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:text="@string/text_h3" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:autofillHints=""
            android:hint="@string/input_selecionar_data"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="205dp"
            android:backgroundTint="#4CAF50"
            android:minHeight="48dp"
            android:text="@string/button_MarcarConsulta"
            android:textColor="#263238"
            tools:ignore="TouchTargetSizeCheck" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
