<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hiddenMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ECECEC">

    <TextView
        android:id="@+id/textViewMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_hidden"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:paddingBottom="12dp"/>

    <Button
        android:id="@+id/buttonAgendarConsultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:drawableStart="@drawable/baseline_event_available_24"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:text="@string/agendar_consultas_btn"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <Button
        android:id="@+id/buttonMinhasConsultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:text="@string/minhas_consultas_hidden"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>
